src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_d__tests__moongate_200x60_seed42.snap
---
source: src/modes/_101_p02_glm53f_max_d.rs
assertion_line: 992
expression: "text(&frame(200, 60, 42, 0.0, &knobs()))"
---
───┐    ,  └───────┐   :'  └───────┐       └───────┐   '   └───────┐       └───────┐ '     └───────┐   ' : └───────┐       └───────┐       └───────┐      :└───────┐   :   └───────┐     : └───────┐    
   ┌───────┘     , ┌───────┘       ┌───────┘       ┌───────┘    ,  ┌───────┘    '  ┌───────┘     ' ┌───────┘ :     ┌───────┘       ┌───────┘  .,:  ┌───────┘       ┌───────┘       ┌───────┘       ┌────
         '                       ,         '     ,  .               '        .  '.,              '        ,      .        :                   ,             ,     :  .          ,                       
                ,  ·╱╱          :                  ,      ────    .           .                   :                              .                 '    :    '   ╱┼┼,   ,   '        ..         ╱╱╱     
            .      ╱*      '           '         :     ───,               :  :                  :                     .     .      .   '           , ''   '    ╱╱  ╲╲      '.             '   ╱╱╱       
          '        ╱│              .                ───       .     ,                      ,        ,    . '            .                                    ╱╱     ╲╲              .      . ╱╱         
                  ╱  │                          .───.                                          , ,'  '        .          '    :       . .         .       ╱╱╱  :     ╲          '           ╱╱          
            ,    ╱,  │                       '───  '           '                                                 :    :                               . ╱╱╱           ╲╲                  ╱╱╱    ╱╱     
  .  ·─ '       ╱╱   │                     ───          ,       ,                  :   :,              ,                      ,                       ╱╱╱     :  '    .╲╲:  ,  . .       ╱╱    ╱╱       
      *───     ╱╱: ,  │                ────                     .                   .                                 .              '         .    ╱╱╱               : ╲              ╱╱╱  '╱╱         
 ,:   │  ───── ╱ .    │       '      ─── :   '                             :.    , .                           :                               :  ╱╱╱          ,         ╲╲           ╱╱  ' ╱╱        : 
      │      ─*'    ' ││         ────   ,       '  ,               :,    ,.'  . ,                                      '  ,       ,   ,         ╱╱╱          :          ,'╲     .   ╱╱    ╱╱            
  ..  │,     ╱╱, :   ' │       ───  '    ,           :         ,                                    .       ,                 .             '.╱╱╱           :       '      ╲╲      ╱╱    ╱╱             
      │     ╱╱         ││ :──── :,                               ,                              .    ..                  ,       :    , ,   ╱╱╱╱         . .'            '  ╲'   ╱╱ '  ╱╱               
      │    ╱╱   '      ·┼───  ,                   '                .         ,             ,    @@@@@@@@          ,         '  '          ╱╱╱╱    ,   '.      ,    '         ╲ ,╱╱    ╱╱                
      │    ╱         ───*' :              :                :                            @@@@@@@@    ·   @@@@@@@@             . :       ╱╱╱╱╱          '   '        .          *╱    ╱╱   .              
      │   ╱       ──── · ,            .         : '        '        '    '       .  @@@@@ ·                  · @@@@@  .              ╱╱╱'╱╱   .'               ,''  '        ╱╱,  ╱╱                    
 :    │ :╱╱ ,  ────,                        .              :                     @@@@                 ·  ·    ·    @@@@    '      ,╱╱╱ ╱╱ '                ,  ':,        '  ╱╱   ╱╱              . '   :
      │  ╱  ───   :.      ,   .                   .                        .   @@@        ·                           @@@        ╱╱╱ ╱╱╱:            ,    .    .       :  ╱╱ . ╱╱   :              .    
      │ ╱────            :'              ,       '  ' ,       ,'  ,          @@@                    ⌒             ⌒    ⌒@@@    ╱╱╱  ╱╱                                   ╱╱  .╱╱                        
'    ·│*─ .                      '                   .         . '         @@@⌒⌒⌒⌒                ~⌒ ⌒⌒⌒⌒⌒      ~· ⌒⌒~⌒⌒⌒⌒@@@,╱╱  ╱╱        ,  '        ,        . ',  ╱╱   ╱╱     .                   ,
      **     '       ,  '          '                                :     @@ ~~~~~              ~~ ~~~~~·     ~~ ~~~~~~~~~~ @@   ╱╱    :                    ,         ╱╱   ╱╱  '                        
      +   '                      '' .  ,                          .      @@≈ ·≈≈≈≈≈·≈        ·  ≈≈≈≈ ·≈≈≈·≈≈≈ ≈≈≈≈ ≈≈≈≈≈≈≈≈≈≈@@ ╱             .                     ╱╱   ╱╱                     ,    :  
 :  '     :                       :  '        :    '  '   :             @@        ·          ·     ·  ·     ·     ·          ·@@ .            .             '      ╱╱  ╱╱     '     .   '            .  
. :                '                              '                  ,'@@                 ·             ·      ·               @@          '.  :                 ╱╱   ╱╱                                
  .   :           ,                            ,            ,   ─────.@@    ·      ·    ·     ·        ·                     ·  @@    :            . .    '     ╱╱  ╱╱      : . :       :               
               :                 '           .     '    ──────── '   @@@·       ··           ·                             ·    @@@                           ╱╱   ╱╱                 '      .   '      
      .      . .       :        ,        :   :   ────────,           @@                                                          @@         . .          :   ╱╱  ╱╱          '           :    '     .   
            .                             ───────:          .       '@@          ·  ·      ·      ·                          ·   @@  ,     '  ' ,      ,    ╱╱  ╱╱       '       ,                  . : 
    '           :                 ────────         '                 @@                       ·                         ·       ·@@  ,   :          ,  · ,╱╱  ╱╱╱   .,                                  
      . :       ,          ──────── ,     '                    .     @@           ·                                   · ·    ·   @@                   ──*+╱  ╱╱      .               '.:'    :          
                    ───────                 :               '   ──── @@                                            ·        ·    @@                ────╱╱,,╱╱                                           
 '.      ,  ────────   '     ,   ,  '               '      ─────' .  @@                 ·            ·        ·    ·             @@   ,        ────. ╱╱╱  ╱╱          ,                                '
    . ───────       .       ',    .      '            :─────         @@@               · ·                         ·            @@@      . ────     ╱╱  ╱╱ , ,   ,,         ,                           
                        :     ' ,          .  '  .─────       .       @@        ·  ·                                            @@ ·   ────      .╱╱╱  ╱╱                  '      ..             : .    
 , .      ,            ,       '              ─────  ,              :  @@                  ·      ·         ·     ·         ·  @@  ─*──        : ╱╱  ╱╱                          :.       '             
                      :        .         ─────'        ,                @@   ·                             ·                  @@ :─╱        :  ╱╱╱ ╱╱╱     '            '        ,   ,   ..  '   '    , 
      .                             ─────                                @@                  ·    ·                          @@   ╱╱          ╱╱  ╱╱        .    .       ,               .  '        .' 
              :                 ─────                                     @@                                                @@   ╱╱    .:.  ╱╱╱ ╱╱        :                . .     .                    
,   ,                  ''   ────    :                         :            @@@                                ·           @@@.   ╱         ╱╱╱ ╱╱                '   ,    ,  :                 '        
:                  .   ─────                       : :                     : @@@     ·                      ·           @@@     ╱      '  ╱╱ ╱╱       . '    '   . '  .          ,:      '          :'  
                   ─────         .   '             ,                   '     : @@@          ·      ·           ·   ·  @@@      ╱        ╱╱╱╱+╱  :           :    '      ', ,                :        :  
            ' ─────                                              :     .        ,@@@@         ··                   @@@@       ╱╱,      ╱╱ ╱╱ ───                    :       : . :                 ' '   
    :     ─────                  ,   .            .                                 @@@@@      ·         · ·   @@@@@          ╱      ╱╱  ╱╱     ───     ,         '  ,                              :   
 :    ────      ,             :                 :    '      :          :    :           @@@@@@@@        @@@@@@@@ ╱    ,      ╱      ╱╱  ╱         ────          '                 '                 :   
     '                                   :   .        . ''           :      '  '           ,    @@@@@@@@        ╱╱ . :,  ' :╱╱    ╱+'  ╱╱.           ─── ,                 :                     ╱╱,'   
        ' '                       .      : .                         ,                              :         ╱╱   ,       ╱╱,   ╱╱││ ╱╱.       .     . ───         :                           ╱╱╱   ' 
   .   :          :                   . ,                     .                   ,   .               '     ╱╱    ':      ╱╱,  ╱╱   │╱╱   .            , .───.   .                 :           ╱╱╱ ,  ,.
    : .    ,           :             .   :       '               ───        .,:                           ╱╱     ,:       ╱   ╱╱   ,│╱   :  :            . , ───,   '           ,           ' ╱+╱ .     
  ' :                   :                                :          ─────                        :     .╱╱╱ '      ,     ╱  ╱╱      +│          : :             ───.           :            : ╱+╱       
            .   . .                   '    :    ,  .'              , ────────  .                    , ╱╱╱        .      ╱╱ ╱╱  :     │    .         . '  '        ───     .    :             ╱+╱        
             . :       .       . , ,  '                   ───────────    ─── ──────       ,          ╱╱                 ╱╱╱       ,  │  :                       .    ───    :,              ╱╱*╱        
    ,                                  :  '      '      ,   ─────     ─── '   '   ─────        ,  ╱╱╱ .                ╱╱╱            │                         :      ───       .        :╱╱.*         
                    ,  '     ,         :            , ──────        ───                ─────  · ╱╱╱       .         : ╱++─────────  ╱─┼: .             ,          ' ':   '───    ,        ╱╱ +╱,    '   
                     :    ,                          ──     ,,   ───              '        ────*+'       , . .  '   ·╱╱      ───────+:││                 ,       :         , ───          ╱╱╱+,      :  
                   .                          .        ─────   ───   .       '      '         · ,─────              ┼*───────      ╱╱ ,│                          ,            ──── '    ┼╱╱╱*,         
           :     ,      .      . :          '    ────────────────  '    '              . .    : .,   ─────'       ╱╱' ╲╲         . ╱   │                                          ───   ╱ ╲╱+ ─────     
        :   ,                   '     ,                  ─     ──                  ,          :           ─ :     ╱    ╲        ,  ╱'   │        ''       ,:                        ─   ╱  ╲│           
─┐  :    └───────┐       └───────┐       └───────┐ .  :  └───────┐       └───────┐    '  └───────┐     : └───────┐       └───────┐.      └───────┐   :   └───────┐     ' └───────┐       └───────┐      
 ┌───────┘       ┌───────┘       ┌───────┘       ┌───────┘'      ┌───────┘    ,  ┌───────┘    :  ┌───────┘       ┌───────┘.      ┌───────┘       ┌───────┘       ┌───────┘     ,:┌───────┘       ┌──────
