src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_d__tests__moongate_seed1337_80x24.snap
---
source: src/modes/_101_p02_glm53f_max_d.rs
assertion_line: 987
expression: "text(&frame(80, 24, 1337, 0.0, &knobs()))"
---
────┐       └───────┐       └───────┐       └───────┐       └───────┐    '  └───
    ┌───────┘      '┌───────┘  '    ┌───────┘ '     ┌───────┘       ┌───────┘   
    '                       '               :   ,,                         :    
 .,   ─             .        ╲╲      ───────────'  ,,        │╲╲    ,       :   
   '  ────                 :  ╲╲        .      ─┼─────────  ││ ╲╲,   ,          
 .    ────────             '    ╲╲             │   '     '──┼   ╲╲         '    
     : . ─────────:         .     ╲, @@@@@@    │       .  ·'│   ╲╲╲      .     .
             ────────           :@@@@  ·   @@@@        ·+──*─    ╲╲╲           :
                ─────────      @@@    ⌒⌒⌒⌒   ⌒@@@   ──++* ,│ .    ╲╲╲           
    , '         :  ─────────  @@   ·~~~~  ⌒⌒⌒~~ @@ ─+╱ · , │       ╲╲╲     '    
   :        .         ──── ─ @@     ·≈·≈~~~≈≈≈≈≈ @@       │        ╲╲╲╲ :    ,: 
                         ──  @@    ≈      ≈≈≈    @@  ─────┼ ,       ╲*++        
 .   ·╲,  .                  @@         ·        @@.  : ·││   ───────╲╲────     
   '  *  .                   @@             ·    @@   :  *────       ╲╲╲     :  
     ·│╲╲     '           :   @@          ·     @@      ·│            ╲╲╲       
.     │ +───     .       .     @@@            @@@.╲ '   ││      ' '    ╲╲╲      
         ╲╲ ──────.             ,@@@@      @@@@,   ╲╲   │       ,  .  ──+╲╲    '
          ╲       ─────  .  .  . '   @@@@@@        '╲   +.  ,     ───── ╲╲      
    .:     ╲╲          ──────                   ,,   ╲╲++*+   ──── '   , ╲╲     
 .          ╲╲, :         '  ─────       '            ╲*╲╲─╲+─    ─────────     
      ───────*+───────  :  ────'  ─────        '   ,  · ,.╲╲ ╲╲╲              ':
             '    ─   ─    ─           ─                 ,  ╲  ╲                
┐       └───────┐    ' :└───────┐       └───────┐,      └───────┐  :    └───────
┌───────┘       ┌───────┘       ┌───────┘       ┌───────┘   .   ┌───────┘
