src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_d__tests__moongate_seed7_80x24.snap
---
source: src/modes/_101_p02_glm53f_max_d.rs
assertion_line: 982
expression: "text(&frame(80, 24, 7, 0.0, &knobs()))"
---
──┐       └───────┐  : '  └───────┐   .   └───────┐       └───────┐  , '  └─────
  ┌───────┘ .    .┌───────┘       ┌───────┘       ┌───────┘       ┌───────┘     
 :'   ·'          .                        ,         :               '          
      ╲*────·      ─────────────────────────────────────────────  ╱ ┼╲╲         
   ,   ╲   │┼*────    ────           :,                 ───*╲    ╱╱╱╲╲╲╲  ╱     
        ╲  ││+  ─────────────         '             ────  ' ╲    ╱╱╱ ╲ │+┼      
 ,    ╲╲╲  │+│      ───── ──────     @@@@@@     ────        ╲' .╱╱*' ╲ ,│┼╲     
       ╲╲╲│++│        , ─────  ─ @@@@      @@@@              ╲, ╱╱+,:·*:│   ,   
         ╲│╱││              ── @@@         ⌒⌒⌒@@@            ╲ ╱╱╱│  ·*,│       
   .     ╲+╱││.               @@ ·       ~~~~~  @@            ┼╱╱ │  ││╲│       
          * +   ,            @@ ~ ·≈·    ≈≈≈≈≈~~ @@           ┼╱╱ │ .│ ╲+       
         ╱╱ + '         ,    @@≈≈≈      ≈      ≈≈@@     ,    ╱╱╱  │  │ ╲+╲      
         ╱ ╱│ '      :       @@          ·       @@   ,      ╱╱╱  │ │   ╲+╲',   
   .    ╱  ╱│    .           @@                  @@.       '╱╱╱   │ │   ╲││.    
  '     ╱'╱ │                 @@               ·@@         ,╱╱╱   │ │    +  ,'  
       ╱' ╱ │           ::   , @@@            @@@     :    ╱╱╱    ││,    +      
     ' ╱ ╱  │    :       '       @@@@      @@@@ '          ·+╱  ,·│*:     ╲     
 :,   ╱  ╱  ┼─++─────                @@@@@@                ╱*    ·*+          ' 
 '    ╱ ╱  ││  ╲╲╲  ──────────             ╲  ':          ·╱│,  '·*,│.     ,    
        ╱  │ :   ╲╲╲     ──────────────     ╲╲            ╱*.'    + │    ,      
       ╱   │       ╲╲         ───────────────++─         ╱╱│,.    │ │ ::        
   '   ╱  .│         ╲  '          ─     ─     ─        :╱╱│      │ │ .     .   
──────┐       └───────┐       └───────┐       └───────┐    .  └───────┐ ,     └─
      ┌───────┘  :    ┌───────┘       ┌───────┘     , ┌───────┘.      ┌───────┘
